// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CommentPrompt renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 4,
      "height": 50,
      "justifyContent": "center",
      "left": 0,
      "marginHorizontal": 8,
      "paddingHorizontal": 7,
      "paddingVertical": 12,
      "right": 0,
      "shadowColor": undefined,
      "shadowOffset": Object {
        "height": 5,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 15,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Avatar
      avatarUrl="me.png"
      style={
        Object {
          "marginRight": 12,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#5D757A",
            "fontSize": 15,
          },
          Object {
            "color": "#A79A9A",
            "fontStyle": "italic",
          },
        ]
      }
    >
      Hi Joe, how can you help today?
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`CommentPrompt renders with comment text 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "borderRadius": 4,
      "height": 50,
      "justifyContent": "center",
      "left": 0,
      "marginHorizontal": 8,
      "paddingHorizontal": 7,
      "paddingVertical": 12,
      "right": 0,
      "shadowColor": undefined,
      "shadowOffset": Object {
        "height": 5,
        "width": 0,
      },
      "shadowOpacity": 0.1,
      "shadowRadius": 15,
    }
  }
>
  <TouchableOpacity
    activeOpacity={0.2}
    focusedOpacity={0.7}
    onPress={[Function]}
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
      }
    }
  >
    <Avatar
      avatarUrl="me.png"
      style={
        Object {
          "marginRight": 12,
        }
      }
    />
    <Text
      accessible={true}
      allowFontScaling={true}
      disabled={false}
      ellipsizeMode="tail"
      style={
        Array [
          Object {
            "color": "#5D757A",
            "fontSize": 15,
          },
          null,
        ]
      }
    >
      A long enough comment that it will 
    </Text>
  </TouchableOpacity>
</View>
`;

exports[`PostDetails renders correctly 1`] = `
<View
  style={
    Object {
      "backgroundColor": "white",
      "flex": 1,
      "paddingLeft": 4,
      "paddingRight": 4,
    }
  }
>
  <Connect(Comments)
    footer={
      <CommentPrompt
        commentEdit={undefined}
        currentUser={
          Object {
            "avatarUrl": "me.png",
            "firstName": [Function],
            "id": 123,
          }
        }
        newComment={undefined}
      />
    }
    header={
      <View
        style={
          Object {
            "marginBottom": 16,
          }
        }
      >
        <PostHeader
          communities={
            Array [
              Object {
                "slug": "foom",
              },
            ]
          }
          creator={
            Object {
              "id": "77",
              "name": "Houdini",
            }
          }
          date="2017-05-19T23:24:58Z"
          editPost={[Function]}
          id="91"
          slug="foom"
          type="request"
        />
        <View
          style={
            Object {
              "marginBottom": 12,
            }
          }
        >
          <SpaceFillingImage
            imageUrl="foom.png"
          />
        </View>
        <PostBody
          details="Lo"
          linkPreview={
            Object {
              "id": "34",
            }
          }
          title="Hi"
        />
        <PostFooter
          commenters={
            Array [
              Object {
                "id": 9,
              },
              Object {
                "id": 7,
              },
            ]
          }
          commentsTotal={12}
          currentUser={
            Object {
              "avatarUrl": "me.png",
              "firstName": [Function],
              "id": 123,
            }
          }
          id="91"
          myVote={true}
          showActivityLabel={true}
          votesTotal={8}
        />
      </View>
    }
    postId="91"
    postPending={true}
  />
</View>
`;
